feature/new-changes2

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -99,7 +99,7 @@
             }
         }
     </table>
-    <h3 style="background-color:aliceblue; font-family:'Comic Sans MS', Times, serif;  opacity:0.7; font-weight:500; color:darkblue; width:255px; height:30px">Registruj menadzera:</h3>
+    <h3 style="background-color:aliceblue; font-family:'Comic Sans MS', Times, serif;  opacity:0.7; font-weight:500; color:darkblue; width:255px; height:30px">Registruj menadžera:</h3>
     <form action="~/Registracija/RegisterVlasnika" method="post">
         <input type="submit" class="btn btn-info" value="Registruj" style="border-radius:9px; width:100px" />
     </form>
