--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
@@ -5,14 +5,19 @@
     ViewBag.Title = "Home Page";
 }
 
-<body background="~/Images/pozadina.jpg">
+<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
 
-    <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Dobrodošli na sajt - Rent - A - Car </h2>
+    <div style="text-align:center; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">
+        <h2 style="background-color:aliceblue; height:35px">Dobrodošli na sajt Rent - A - Car servisa</h2>
+    </div>
     <br />
     <br />
-    <h3 style="background-color:aliceblue">Pretrage</h3>
-    <div>
-        <table class="table table-striped">
+    <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" style="border-radius:9px; width:170px">
+        Kliknite za pretrage
+    </button>
+    <div class="collapse" id="collapseExample">
+        <br />
+        <table class="table table-striped" style="font-family:'Comic Sans MS', Times, serif">
             <tr>
                 <th>Unesite naziv vozila:</th>
                 <th>Unesite mesto:</th>
@@ -20,19 +25,19 @@
             <tr>
                 <td>
                     <form action="~/Vozilo/SearchByMarka">
-                        <input list="marka" name="marka" />
-                        <input type="submit" class="btn btn-info" value="Pretraga" />
+                        <input list="marka" name="marka" style="border-radius:9px; border-width:1px"/>
+                        <input type="submit" class="btn btn-info" value="Pretraga" style="border-radius:9px; width:100px"/>
                     </form>
                 </td>
                 <td>
                     <form action="~/Vozilo/SearchByMesto">
-                        <input list="mesto" name="mesto" />
-                        <input type="submit" class="btn btn-info" value="Pretraga" />
+                        <input list="mesto" name="mesto" style="border-radius:9px; border-width:1px"/>
+                        <input type="submit" class="btn btn-info" value="Pretraga" style="border-radius:9px; width:100px"/>
                     </form>
                 </td>
             </tr>
         </table>
-        <table class="table-striped">
+        <table class="table-striped" style="font-family:'Comic Sans MS', Times, serif">
             <tr>
                 <th colspan="10">Unesite cenu od:</th>
                 <th colspan="10">Unesite cenu do:</th>
@@ -40,173 +45,175 @@
             <tr>
                 <td colspan="10">
                     <form action="~/Vozilo/SearchByCena">
-                        <input type="number" name="cenaod" />
-                        <input type="submit" class="btn btn-info" value="Pretraga" />
+                        <input type="number" name="cenaod" style="border-radius:9px; border-width:1px"/>
+                        <input type="submit" class="btn btn-info" value="Pretraga" style="border-radius:9px; width:100px" />
                     </form>
                 </td>
                 <td colspan="10">
                     <form action="~/Vozilo/SearchByCenaDo">
-                        <input type="number" name="cenado" />
-                        <input type="submit" class="btn btn-info" value="Pretraga" />
+                        <input type="number" name="cenado" style="border-radius:9px; border-width:1px"/>
+                        <input type="submit" class="btn btn-info" value="Pretraga" style="border-radius:9px; width:100px" />
                     </form>
                 </td>
             </tr>
         </table>
     </div>
-    <h3 style="background-color:aliceblue">Filtriranje</h3>
-    <form action="~/Vozilo/FiltriranjeTipa" method="post">
-        <label>Tip vozila:</label>
-        <select name="tip">
-            <option value=""></option>
-            <option value="DZIP">DZIP</option>
-            <option value="KOMBI">KOMBI</option>
-            <option value="KARAVAN">KARAVAN</option>
-            <option value="STANDARD_GRADSKI">STANDARD GRADSKI</option>
-        </select>
-        &nbsp;&nbsp;
-        <input type="submit" class="btn btn-info" value="Filtriraj" />
-    </form>
-    <br />
-    <div>
+    <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2" style="border-radius:9px; width:170px">Kliknite za filtriranje</button>
+    <div class="collapse multi-collapse" id="multiCollapseExample2">
+        <br />
+        <form action="~/Vozilo/FiltriranjeTipa" method="post">
+            <label style="background-color:aliceblue; width:100px; font-family:'Comic Sans MS', Times, serif;">Tip vozila:</label>
+            <select name="tip" style="border-radius:9px; border-width:1px">
+                <option value=""></option>
+                <option value="DZIP">DZIP</option>
+                <option value="KOMBI">KOMBI</option>
+                <option value="KARAVAN">KARAVAN</option>
+                <option value="STANDARD_GRADSKI">STANDARD GRADSKI</option>
+            </select>
+            &nbsp;&nbsp;
+            <input type="submit" class="btn btn-info" value="Filtriraj" style="border-radius:9px; width:100px" />
+        </form>
     </div>
-    <h3 style="background-color:aliceblue">Sortiranje po ceni</h3>
-    <form action="/Vozilo/Sortiraj" method="post">
-        <label>Nacin sortiranja: </label>
-        <select name="tipSortiranja">
-            <option value=""></option>
-            <option value="rastuce">RASTUCE</option>
-            <option value="opadajuce">OPADAJUCE</option>
-        </select>
-        <input type="submit" class="btn btn-info" value="Sortiraj" />
-    </form>
-    <div>
-    </div>
-    <br />
+        <br />
+        <div>
+        </div>
+        <h3 style="background-color:aliceblue">Sortiranje po ceni</h3>
+        <form action="/Vozilo/Sortiraj" method="post">
+            <label>Nacin sortiranja: </label>
+            <select name="tipSortiranja">
+                <option value=""></option>
+                <option value="rastuce">RASTUCE</option>
+                <option value="opadajuce">OPADAJUCE</option>
+            </select>
+            <input type="submit" class="btn btn-info" value="Sortiraj" />
+        </form>
+        <div>
+        </div>
+        <br />
 
-    @if (Session["Korisnik"] != null)
-    {
-        Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
-        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.MENADZER))
+        @if (Session["Korisnik"] != null)
         {
-            <form action="~/Vozilo/DodajNovoVozilo">
-                <input type="submit" class="btn btn-info" value="Dodaj novo vozilo" />
-            </form>
-
-
-        }
-    }
-    <br />
-    <!--TABELA VIDLJIVA KORISNICIMA, SAMO SA AKTIVNIM VOZILIMA-->
-    <table class="table table-striped">
-        <tr>
-            <th colspan="2">Marka vozila</th>
-            <th colspan="2">Model vozila</th>
-            <th colspan="2">Tip vozila</th>
-            <th colspan="2">Broj mesta  u vozilu</th>
-            <th colspan="2">Datum kad je vozilo slobodno</th>
-            <th colspan="2">Cena po danu [RSD]</th>
-            <th colspan="2">Ulica</th>
-            <th colspan="2">Broj</th>
-            <th colspan="2">Grad</th>
-            <th colspan="2">Postanski broj</th>
-            <th colspan="2">Poster</th>
-            <th colspan="2">Dodaj</th>
-        </tr>
-        @foreach (Vozilo item in Model)
-        {
-            if (item.Obrisano == false && item.Aktivno == true)
+            Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
+            if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.MENADZER))
             {
-                <tbody>
-                    <tr>
-                        <td colspan="2">@item.MarkaVozila</td>
-                        <td colspan="2">@item.ModelVozila</td>
-                        <td colspan="2">@item.TipVozila</td>
-                        <td colspan="2">@item.BrojMestaUVozilu</td>
-                        <td colspan="2">@item.DatumKadJeSlobodnoVozilo</td>
-                        <td colspan="2">@item.CenaPoDanu</td>
-                        <td colspan="2">@item.Ulica</td>
-                        <td colspan="2">@item.Broj</td>
-                        <td colspan="2">@item.Mesto</td>
-                        <td colspan="2">@item.PostanskiBroj</td>
-                        <td colspan="2">@item.Poster</td>
-                        <td colspan="2">
-                            <form action="~/Vozilo/ProfilVozila" method="post">
-                                <input type="text" name="markaVozila" value="@item.MarkaVozila" hidden />
-                                <input type="submit" class="btn btn-info" value="Profil vozila" />
-                            </form>
+                <form action="~/Vozilo/DodajNovoVozilo">
+                    <input type="submit" class="btn btn-info" value="Dodaj novo vozilo" />
+                </form>
 
-                        </td>
-                    </tr>
-                </tbody>
+
             }
-
         }
-    </table>
-
-    <br />
-    <br />
-    <br />
-    <!--TABELA VIDLJIVA SAMO ADMINU, U KOJOJ SE NALAZI I AKTIVNA I NEAKTIVNA VOZILA-->
-    @if (Session["Korisnik"] != null)
-    {
-        Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
-        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.GLAVNI_MENADZER))
-        {
-            <table class="table table-striped">
-                <tr>
-                    <
-                    <th colspan="2">Marka vozila</th>
-                    <th colspan="2">Model vozila</th>
-                    <th colspan="2">Tip vozila</th>
-                    <th colspan="2">Broj mesta  u vozilu</th>
-                    <th colspan="2">Datum kad je vozilo slobodno</th>
-                    <th colspan="2">Cena po danu [RSD]</th>
-                    <th colspan="2">Ulica</th>
-                    <th colspan="2">Broj</th>
-                    <th colspan="2">Grad</th>
-                    <th colspan="2">Postanski broj</th>
-                    <th colspan="2">Poster</th>
-                    <th colspan="2">Dodaj</th>
-                </tr>
-                @foreach (Vozilo item in Model)
+        <br />
+        <!--TABELA VIDLJIVA KORISNICIMA, SAMO SA AKTIVNIM VOZILIMA-->
+        <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif;">
+            <tr>
+                <th colspan="2">Marka vozila</th>
+                <th colspan="2">Model vozila</th>
+                <th colspan="2">Tip vozila</th>
+                <th colspan="2">Broj mesta  u vozilu</th>
+                <th colspan="2">Datum kad je vozilo slobodno</th>
+                <th colspan="2">Cena po danu [RSD]</th>
+                <th colspan="2">Ulica</th>
+                <th colspan="2">Broj</th>
+                <th colspan="2">Grad</th>
+                <th colspan="2">Postanski broj</th>
+                <th colspan="2">Poster</th>
+                <th colspan="2">Dodaj</th>
+            </tr>
+            @foreach (Vozilo item in Model)
+            {
+                if (item.Obrisano == false && item.Aktivno == true)
                 {
-                    if (item.Obrisano == false && item.Aktivno == false)
-                    {
-                        <tbody>
-                            <tr>
-                                <td colspan="2">@item.MarkaVozila</td>
-                                <td colspan="2">@item.ModelVozila</td>
-                                <td colspan="2">@item.TipVozila</td>
-                                <td colspan="2">@item.BrojMestaUVozilu</td>
-                                <td colspan="2">@item.DatumKadJeSlobodnoVozilo</td>
-                                <td colspan="2">@item.CenaPoDanu</td>
-                                <td colspan="2">@item.Ulica</td>
-                                <td colspan="2">@item.Broj</td>
-                                <td colspan="2">@item.Mesto</td>
-                                <td colspan="2">@item.PostanskiBroj</td>
-                                <td colspan="2">@item.Poster</td>
-                                <td colspan="2">
-                                    <form action="~/Vozilo/ProfilVozila" method="post">
-                                        <input type="text" name="markaVozila" value="@item.MarkaVozila" hidden />
-                                        <input type="submit" class="btn btn-info" value="Profil vozila" />
-                                    </form>
-                                    <form action="~/Vozilo/ObrisiVozilo" method="post">
-                                        <input type="text" name="markaVozil" value="@item.MarkaVozila" hidden />
-                                        <input type="submit" class="btn btn-info" value="Izbrisi" />
-                                    </form>
-                                    <form action="~/Vozilo/StatusVozila" method="post">
-                                        <input type="text" name="markaVozi" value="@item.MarkaVozila" hidden />
-                                        <input type="submit" class="btn btn-info" value="Aktiviraj" />
-                                    </form>
-                                </td>
-                            </tr>
-                        </tbody>
-                    }
+                    <tbody>
+                        <tr>
+                            <td colspan="2">@item.MarkaVozila</td>
+                            <td colspan="2">@item.ModelVozila</td>
+                            <td colspan="2">@item.TipVozila</td>
+                            <td colspan="2">@item.BrojMestaUVozilu</td>
+                            <td colspan="2">@item.DatumKadJeSlobodnoVozilo</td>
+                            <td colspan="2">@item.CenaPoDanu</td>
+                            <td colspan="2">@item.Ulica</td>
+                            <td colspan="2">@item.Broj</td>
+                            <td colspan="2">@item.Mesto</td>
+                            <td colspan="2">@item.PostanskiBroj</td>
+                            <td colspan="2">@item.Poster</td>
+                            <td colspan="2">
+                                <form action="~/Vozilo/ProfilVozila" method="post">
+                                    <input type="text" name="markaVozila" value="@item.MarkaVozila" hidden />
+                                    <input type="submit" class="btn btn-info" value="Profil vozila" style="border-radius:9px; width:100px"/>
+                                </form>
 
+                            </td>
+                        </tr>
+                    </tbody>
                 }
-            </table>
+
+            }
+        </table>
+
+        <br />
+        <br />
+        <br />
+        <!--TABELA VIDLJIVA SAMO ADMINU, U KOJOJ SE NALAZI I AKTIVNA I NEAKTIVNA VOZILA-->
+        @if (Session["Korisnik"] != null)
+        {
+            Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
+            if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.GLAVNI_MENADZER))
+            {
+                <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif;">
+                    <tr>
+                        <th colspan="2">Marka vozila</th>
+                        <th colspan="2">Model vozila</th>
+                        <th colspan="2">Tip vozila</th>
+                        <th colspan="2">Broj mesta  u vozilu</th>
+                        <th colspan="2">Datum kad je vozilo slobodno</th>
+                        <th colspan="2">Cena po danu [RSD]</th>
+                        <th colspan="2">Ulica</th>
+                        <th colspan="2">Broj</th>
+                        <th colspan="2">Grad</th>
+                        <th colspan="2">Postanski broj</th>
+                        <th colspan="2">Poster</th>
+                        <th colspan="2">Dodaj</th>
+                    </tr>
+                    @foreach (Vozilo item in Model)
+                    {
+                        if (item.Obrisano == false && item.Aktivno == false)
+                        {
+                            <tbody>
+                                <tr>
+                                    <td colspan="2">@item.MarkaVozila</td>
+                                    <td colspan="2">@item.ModelVozila</td>
+                                    <td colspan="2">@item.TipVozila</td>
+                                    <td colspan="2">@item.BrojMestaUVozilu</td>
+                                    <td colspan="2">@item.DatumKadJeSlobodnoVozilo</td>
+                                    <td colspan="2">@item.CenaPoDanu</td>
+                                    <td colspan="2">@item.Ulica</td>
+                                    <td colspan="2">@item.Broj</td>
+                                    <td colspan="2">@item.Mesto</td>
+                                    <td colspan="2">@item.PostanskiBroj</td>
+                                    <td colspan="2">@item.Poster</td>
+                                    <td colspan="2">
+                                        <form action="~/Vozilo/ProfilVozila" method="post">
+                                            <input type="text" name="markaVozila" value="@item.MarkaVozila" hidden />
+                                            <input type="submit" class="btn btn-info" value="Profil vozila" style="border-radius:9px; width:100px"/>
+                                        </form>
+                                        <form action="~/Vozilo/ObrisiVozilo" method="post">
+                                            <input type="text" name="markaVozil" value="@item.MarkaVozila" hidden />
+                                            <input type="submit" class="btn btn-danger" value="Izbrisi" style="border-radius:9px; width:100px"/>
+                                        </form>
+                                        <form action="~/Vozilo/StatusVozila" method="post">
+                                            <input type="text" name="markaVozi" value="@item.MarkaVozila" hidden />
+                                            <input type="submit" class="btn btn-success" value="Aktiviraj" style="border-radius:9px; width:100px"/>
+                                        </form>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        }
+
+                    }
+                </table>
+            }
         }
-    }
 
 
 </body>
